--- a/style.css
+++ b/style.css
@@ -2,4 +2,28 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-size: 24px;
+}
+
+nav ul {
+  display: flex;
+  justify-content: space-evenly;
+  list-style-type: none;
+}
+
+header .nav-link {
+  padding: 1rem;
+}
+.nav-link {
+  background-color: rgb(15, 15, 15);
+  width: 100%;
+  text-align: center;
+}
+.nav-link a {
+  color: white;
+  text-decoration: none;
+}
+
+.nav-link:hover {
+  background-color: rgb(46, 46, 46);
 }
