--- a/style.css
+++ b/style.css
@@ -3,8 +3,12 @@
   margin: 0;
   box-sizing: border-box;
   font-size: 24px;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
+body {
+  height: 100vh;
+}
 nav ul {
   display: flex;
   justify-content: space-evenly;
@@ -19,13 +23,23 @@ header .nav-link {
   width: 100%;
   text-align: center;
 }
+
 .nav-link a {
   color: white;
   text-decoration: none;
+  display: block;
+  width: 100%;
+  height: 100%;
+  font-size: 1.2rem;
 }
 
 .nav-link:hover {
   background-color: rgb(46, 46, 46);
+}
+
+h1 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
 }
 
 main {
@@ -50,7 +64,7 @@ main {
   aspect-ratio: 1 / 1;
 }
 
-/* .card-container {
+.card-container {
   grid-area: cards;
   position: relative;
   display: flex;
@@ -60,9 +74,21 @@ main {
 
 .card {
   position: absolute;
-} */
+}
 
-h1 {
-  font-size: 2rem;
-  margin-bottom: 1rem;
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(15, 15, 15);
+  padding: 1rem;
+}
+
+footer > * {
+  width: 100%;
+}
+
+.contact-information {
+  color: white;
+  text-align: center;
 }
