--- a/stylesheets/projects-styling.css
+++ b/stylesheets/projects-styling.css
@@ -1,7 +1,9 @@
 .card-section {
   display: flex;
   flex-direction: column;
-  gap: 40%;
+
+  text-align: center;
+  justify-content: space-around;
   text-align: center;
 }
 
@@ -11,11 +13,12 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 1000px;
 }
 
 .card {
   position: absolute;
-  width: 40%;
+  width: 500px;
   transition: transform 0.8s ease-out;
 }
 
