--- a/stylesheets/general-styling.css
+++ b/stylesheets/general-styling.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-size: 24px;
+  font-size: 20px;
   font-family: Georgia, "Times New Roman", Times, serif;
 }
 
@@ -10,6 +10,8 @@ body {
   display: grid;
   grid-template-areas: "header main main main" "header main main main" "header main main main" "footer footer footer footer";
   grid-template-columns: 150px repeat(3, auto);
+  grid-template-rows: auto auto auto 1fr;
+  min-height: 100vh;
 }
 
 nav ul {
@@ -55,8 +57,8 @@ footer .nav-link {
   border-left: 1px solid rgb(181, 181, 181);
 }
 
-footer .nav-link:last-child {
-  border-right: 1px solid rgb(181, 181, 181);
+footer .nav-link:first-child {
+  border: none;
 }
 
 h1 {
@@ -70,6 +72,8 @@ h2 {
 main {
   grid-area: main;
   text-align: center;
+  background-color: rgb(25, 25, 25);
+  color: white;
 }
 
 footer {
@@ -88,4 +92,36 @@ footer > * {
 .contact-information {
   color: white;
   text-align: center;
+}
+
+@media (max-width: 800px) {
+  * {
+    font-size: 16px;
+  }
+
+  body {
+    grid-template-areas: "header" "main" "main" "footer";
+    grid-template-columns: 1fr;
+  }
+
+  header nav ul {
+    flex-direction: row;
+  }
+
+  header .nav-link {
+    border: none;
+    border-left: 1px solid rgb(181, 181, 181);
+    padding: 1rem 0;
+  }
+
+  header .nav-link:first-child {
+    border: none;
+  }
+
+  footer {
+    flex-direction: column;
+  }
+  footer nav {
+    margin-bottom: 2rem;
+  }
 }
