--- a/stylesheets/projects-styling.css
+++ b/stylesheets/projects-styling.css
@@ -1,10 +1,15 @@
+main {
+  padding-top: 1rem;
+}
 .card-section {
   display: flex;
   flex-direction: column;
 
   text-align: center;
   justify-content: space-around;
-  text-align: center;
+  color: rgb(15, 15, 15);
+  background-color: white;
+  padding-top: 1rem;
 }
 
 .card-container {
@@ -13,12 +18,12 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 1000px;
+  height: 60vw;
 }
 
 .card {
   position: absolute;
-  width: 500px;
+  width: 30vw;
   transition: transform 0.8s ease-out;
 }
 
@@ -43,17 +48,26 @@
 }
 
 .card-container:hover > .card:nth-of-type(1) {
-  transform: translate(45%, 10%) rotate(15deg);
+  transform: translate(75%, 10%) rotate(15deg);
 }
 
 .card-container:hover > .card:nth-of-type(2) {
-  transform: translate(15%, 0) rotate(6deg);
+  transform: translate(25%, 0) rotate(6deg);
 }
 
 .card-container:hover > .card:nth-of-type(3) {
-  transform: translate(-15%, 0) rotate(-6deg);
+  transform: translate(-25%, 0) rotate(-6deg);
 }
 
 .card-container:hover > .card:nth-of-type(4) {
-  transform: translate(-45%, 10%) rotate(-15deg);
+  transform: translate(-75%, 10%) rotate(-15deg);
+}
+
+@media (max-width: 800px) {
+  .card-container {
+    height: 60vw;
+  }
+  .card {
+    width: 35vw;
+  }
 }
