--- a/stylesheets/home-styling.css
+++ b/stylesheets/home-styling.css
@@ -15,3 +15,39 @@
   color: white;
   aspect-ratio: 1 / 1;
 }
+
+.skills {
+  display: flex;
+  text-align: left;
+  justify-content: space-evenly;
+  padding: 1rem;
+  gap: 1rem;
+}
+
+.skill {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  background-color: rgb(15, 15, 15);
+  border-radius: 1rem;
+  padding: 0.5rem;
+}
+
+.skills i {
+  font-size: 1.2rem;
+}
+
+.skills h3 {
+  margin-bottom: 0.2rem;
+  font-size: 1rem;
+}
+.skills p {
+  font-size: 0.8rem;
+}
+
+@media (max-width: 800px) {
+  .skills {
+    flex-direction: column;
+  }
+}
