--- a/stylesheets/projects-styling.css
+++ b/stylesheets/projects-styling.css
@@ -31,6 +31,22 @@ main {
   width: 100%;
 }
 
+@keyframes fadeIn {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.fade-in-animation {
+  animation: fadeIn 1s;
+}
+
 .card:nth-of-type(1) {
   transform: translateX(6%) rotate(10deg);
 }
@@ -61,6 +77,25 @@ main {
 
 .card-container:hover > .card:nth-of-type(4) {
   transform: translate(-75%, 10%) rotate(-15deg);
+}
+
+.card-buttons {
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+.card-buttons button {
+  display: block;
+  border-radius: 100%;
+  border: none;
+  background-color: rgb(25, 25, 25);
+}
+.card-buttons button i {
+  font-size: 3rem;
+  color: white;
+  padding: 1rem;
 }
 
 @media (max-width: 800px) {
