Compressed images to jpg

--- a/stylesheets/home-styling.css
+++ b/stylesheets/home-styling.css
@@ -1,6 +1,6 @@
 .introduction-information {
   background-color: rgb(36, 36, 36);
-  background: url(../images/IMG_0972.PNG) no-repeat;
+  background: url(../images/IMG_0972.jpg) no-repeat;
 
   background-size: cover;
 
