--- a/stylesheets/projects-styling.css
+++ b/stylesheets/projects-styling.css
@@ -18,7 +18,7 @@ main {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 60vw;
+  height: 40vw;
 }
 
 .card {
@@ -34,12 +34,19 @@ main {
 @keyframes fadeIn {
   0% {
     opacity: 1;
+    transform: scale(1);
   }
-  50% {
-    opacity: 0.5;
+  30% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  60% {
+    opacity: 0;
+    transform: scale(0);
   }
   100% {
     opacity: 1;
+    transform: scale(1);
   }
 }
 
@@ -48,7 +55,7 @@ main {
 }
 
 .card:nth-of-type(1) {
-  transform: translateX(6%) rotate(10deg);
+  transform: translateX(6%) rotate(6deg);
 }
 
 .card:nth-of-type(2) {
@@ -91,6 +98,7 @@ main {
   border-radius: 100%;
   border: none;
   background-color: rgb(25, 25, 25);
+  cursor: pointer;
 }
 .card-buttons button i {
   font-size: 3rem;
