--- a/stylesheets/projects-styling.css
+++ b/stylesheets/projects-styling.css
@@ -1,5 +1,6 @@
 main {
   padding-top: 1rem;
+  background: radial-gradient(rgb(46, 46, 46), rgb(15, 15, 15));
 }
 .card-section {
   display: flex;
@@ -7,8 +8,7 @@ main {
 
   text-align: center;
   justify-content: space-around;
-  color: rgb(15, 15, 15);
-  background-color: white;
+  color: white;
   padding-top: 1rem;
 }
 
@@ -88,22 +88,56 @@ main {
 
 .card-buttons {
   display: flex;
-  gap: 2rem;
+  gap: 4rem;
   justify-content: center;
   margin-bottom: 2rem;
 }
 
 .card-buttons button {
   display: block;
-  border-radius: 100%;
+  border-radius: 2rem;
   border: none;
-  background-color: rgb(25, 25, 25);
+  background-color: rgb(15, 15, 15);
   cursor: pointer;
 }
 .card-buttons button i {
   font-size: 3rem;
   color: white;
   padding: 1rem;
+}
+
+.project-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+}
+
+.project-link a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  text-align: left;
+  padding: 2rem;
+  background-color: rgba(15, 15, 15, 0.75);
+  border-radius: 1rem;
+  text-decoration: none;
+  color: white;
+}
+.project-link i {
+  font-size: 2rem;
+}
+.project-link p {
+  font-size: 1rem;
+  color: rgba(255, 255, 255, 0.75);
+}
+.project-link h3 {
+  font-size: 1.2rem;
+}
+
+.project-link a:hover {
+  background-color: rgba(46, 46, 46, 0.75);
 }
 
 @media (max-width: 800px) {
