--- a/stylesheets/general-styling.css
+++ b/stylesheets/general-styling.css
@@ -24,11 +24,12 @@ nav ul {
   background-color: rgb(15, 15, 15);
   width: 100%;
   text-align: center;
-  padding: 1rem;
+  position: relative;
 }
 
 .nav-link a {
   color: white;
+  padding: 1rem;
   text-decoration: none;
   display: block;
   width: 100%;
@@ -44,10 +45,6 @@ nav ul {
 .blue {
   color: rgb(70, 172, 255);
   font-size: 3rem;
-}
-
-.nav-link:hover {
-  background-color: rgb(46, 46, 46);
 }
 
 header nav ul {
@@ -93,7 +90,7 @@ footer {
   align-items: center;
   background-color: rgb(15, 15, 15);
   padding: 1rem;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 footer > * {
@@ -122,8 +119,51 @@ footer > * {
 }
 
 .contact-information * {
-  font-size: 0.6rem;
+  font-size: 0.7rem;
 }
+
+.introduction-information > div .sweep-cover {
+  visibility: visible;
+  animation: sweepToRight 1s forwards;
+}
+
+.project-link:hover > .sweep-cover {
+  visibility: visible;
+  animation: sweepToRight 0.8s forwards;
+}
+
+.nav-link:hover > .sweep-cover {
+  animation: sweepToRight 0.6s forwards;
+  visibility: visible;
+}
+
+.sweep-cover {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: white;
+  visibility: hidden;
+  border-radius: 1rem;
+  display: block;
+}
+@keyframes sweepToRight {
+  0% {
+    width: 0%;
+    right: auto;
+  }
+  50% {
+    width: 100%;
+    right: auto;
+  }
+  51% {
+    right: 0;
+  }
+  100% {
+    width: 0%;
+    right: 0;
+  }
+}
+
 @media (max-width: 800px) {
   * {
     font-size: 16px;
