--- a/stylesheets/projects-styling.css
+++ b/stylesheets/projects-styling.css
@@ -97,13 +97,17 @@ main {
   display: block;
   border-radius: 2rem;
   border: none;
-  background-color: rgb(15, 15, 15);
+  background-color: rgba(15, 15, 15, 0.8);
   cursor: pointer;
+}
+.card-buttons button:hover > i {
+  transform: scale(1.2);
 }
 .card-buttons button i {
   font-size: 3rem;
   color: white;
   padding: 1rem;
+  transition: transform 0.3s;
 }
 
 .project-links {
@@ -136,8 +140,41 @@ main {
   font-size: 1.2rem;
 }
 
-.project-link a:hover {
-  background-color: rgba(46, 46, 46, 0.75);
+.project-link {
+  position: relative;
+}
+
+.project-link:hover > .sweep-cover {
+  visibility: visible;
+  animation: sweepToRight 0.8s forwards;
+}
+
+.sweep-cover {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: white;
+  visibility: hidden;
+  border-radius: 1rem;
+  display: block;
+}
+
+@keyframes sweepToRight {
+  0% {
+    width: 0%;
+    right: auto;
+  }
+  50% {
+    width: 100%;
+    right: auto;
+  }
+  51% {
+    right: 0;
+  }
+  100% {
+    width: 0%;
+    right: 0;
+  }
 }
 
 @media (max-width: 800px) {
