--- a/stylesheets/projects-styling.css
+++ b/stylesheets/projects-styling.css
@@ -144,8 +144,38 @@ main {
   position: relative;
 }
 
+.project-link:hover > .sweep-cover {
+  visibility: visible;
+  animation: sweepToRight 0.8s forwards;
+}
 
+.sweep-cover {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: white;
+  visibility: hidden;
+  border-radius: 1rem;
+  display: block;
+}
 
+@keyframes sweepToRight {
+  0% {
+    width: 0%;
+    right: auto;
+  }
+  50% {
+    width: 100%;
+    right: auto;
+  }
+  51% {
+    right: 0;
+  }
+  100% {
+    width: 0%;
+    right: 0;
+  }
+}
 
 @media (max-width: 800px) {
   .card-container {
