--- a/stylesheets/about-styling.css
+++ b/stylesheets/about-styling.css
@@ -32,6 +32,9 @@ h2 {
 }
 
 .skill-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   padding: 0.8rem;
   background-color: rgb(46, 46, 46);
@@ -46,19 +49,28 @@ h2 {
   left: 0;
   background-color: rgb(70, 172, 255);
   border-radius: 2rem;
+  animation: expandWidth 2s ease-in-out forwards;
+}
+@keyframes expandWidth {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
 }
 
 .skill-bar:nth-child(1) .skill-bar-color {
-  width: 90%;
+  max-width: 90%;
 }
 .skill-bar:nth-child(2) .skill-bar-color {
-  width: 80%;
+  max-width: 80%;
 }
 .skill-bar:nth-child(3) .skill-bar-color {
-  width: 65%;
+  max-width: 65%;
 }
 .skill-bar:nth-child(4) .skill-bar-color {
-  width: 85%;
+  max-width: 85%;
 }
 
 .skill-bar h3 {
