--- a/stylesheets/about-styling.css
+++ b/stylesheets/about-styling.css
@@ -1,6 +1,3 @@
-main {
-  padding: 2rem;
-}
 main .container {
   display: flex;
   flex-direction: column;
@@ -53,7 +50,7 @@ h2 {
 }
 @keyframes expandWidth {
   0% {
-    width: 0;
+    width: 20%;
   }
   100% {
     width: 100%;
