--- a/stylesheets/about-styling.css
+++ b/stylesheets/about-styling.css
@@ -33,6 +33,7 @@ h2 {
   justify-content: center;
   align-items: center;
   width: 100%;
+  max-height: 3rem;
   padding: 0.8rem;
   background-color: rgb(46, 46, 46);
   position: relative;
