--- a/stylesheets/projects-styling.css
+++ b/stylesheets/projects-styling.css
@@ -1,13 +1,14 @@
 main {
   padding-top: 1rem;
-  background: radial-gradient(rgb(46, 46, 46), rgb(15, 15, 15));
 }
+
 .card-section {
   display: flex;
   flex-direction: column;
 
   text-align: center;
   justify-content: space-around;
+  align-items: center;
   color: white;
   padding-top: 1rem;
 }
@@ -17,7 +18,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 50%;
   height: 40vw;
 }
 
@@ -112,10 +113,11 @@ main {
 }
 
 .project-links {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-auto-rows: 1fr;
   padding: 1rem;
+  gap: 2rem;
 }
 
 .project-link a {
@@ -129,6 +131,7 @@ main {
   border-radius: 1rem;
   text-decoration: none;
   color: white;
+  height: 100%;
 }
 .project-link i {
   font-size: 2rem;
@@ -151,5 +154,11 @@ main {
   }
   .card {
     width: 35vw;
+  }
+}
+
+@media (min-width: 1200px) {
+  .project-links {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
