--- a/stylesheets/general-styling.css
+++ b/stylesheets/general-styling.css
@@ -133,6 +133,23 @@ footer > * {
   font-size: 0.65rem;
 }
 
+section {
+  opacity: 0;
+}
+
+section.active {
+  animation: bounceIn 1s forwards;
+}
+@keyframes bounceIn {
+  0% {
+    opacity: 0;
+    transform: translateY(50%);
+  }
+  100% {
+    opacity: 100%;
+  }
+}
+
 @media (max-width: 800px) {
   * {
     font-size: 16px;
