--- a/stylesheets/general-styling.css
+++ b/stylesheets/general-styling.css
@@ -49,7 +49,8 @@ nav ul {
   color: rgb(70, 172, 255);
 }
 
-.nav-link:hover {
+.nav-link:hover,
+.nav-link:focus {
   background-color: rgb(46, 46, 46);
 }
 
@@ -79,10 +80,16 @@ main {
   background: radial-gradient(rgb(35, 35, 35), rgb(25, 25, 25));
 }
 
-h1,
-h1 .blue {
+h1 {
   font-size: 3rem;
-  margin-bottom: 1rem;
+  border-bottom: 2px solid rgb(70, 172, 255);
+  width: 50%;
+  margin: 2rem auto;
+}
+
+.introduction-information h1 {
+  width: 100%;
+  border: none;
 }
 
 h2 {
@@ -142,6 +149,347 @@ footer > * {
   animation: bounceIn 1s forwards;
 }
 
+.home-container h1 .blue {
+  font-size: inherit;
+}
+
+.introduction-information {
+  background-color: rgb(36, 36, 36);
+  background: url(../images/image0.jpg) no-repeat;
+  border-radius: 2rem;
+
+  background-size: cover;
+
+  padding: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  color: white;
+  aspect-ratio: 1 / 1;
+}
+
+.introduction-information div {
+  background-color: rgba(15, 15, 15, 0.75);
+  border-radius: 2rem;
+  padding: 1rem;
+}
+
+.abilities {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  text-align: left;
+  padding: 1rem;
+  gap: 1rem;
+}
+
+.ability {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  background-color: rgb(15, 15, 15);
+  border-radius: 1rem;
+  padding: 0.5rem;
+}
+
+.abilities i {
+  font-size: 1.2rem;
+}
+
+.abilities h3 {
+  margin-bottom: 0.2rem;
+  font-size: 1rem;
+}
+.abilities p {
+  font-size: 0.8rem;
+  color: rgba(255, 255, 255, 0.75);
+}
+
+.about-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.about-me p,
+h2 {
+  margin-bottom: 1rem;
+}
+
+.about-me {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.about-me img {
+  width: 20vw;
+  display: block;
+  border-radius: 2rem;
+}
+
+.skill-bar-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+}
+
+.skill-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-height: 3rem;
+  padding: 0.8rem;
+  background-color: rgb(46, 46, 46);
+  position: relative;
+  border-radius: 2rem;
+}
+
+.active .skill-bar-color {
+  position: absolute;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgb(70, 172, 255);
+  border-radius: 2rem;
+  animation: expandWidth 2s ease-in-out forwards;
+}
+
+@keyframes expandWidth {
+  0% {
+    width: 20%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+.skill-bar:nth-child(1) .skill-bar-color {
+  max-width: 90%;
+}
+.skill-bar:nth-child(2) .skill-bar-color {
+  max-width: 80%;
+}
+.skill-bar:nth-child(3) .skill-bar-color {
+  max-width: 65%;
+}
+.skill-bar:nth-child(4) .skill-bar-color {
+  max-width: 85%;
+}
+
+.skill-bar h3 {
+  text-align: center;
+  position: relative;
+  z-index: 1;
+}
+
+.skills ul {
+  text-align: left;
+  list-style-position: inside;
+  margin-bottom: 1rem;
+}
+
+.skills li {
+  padding: 0.3rem;
+}
+
+.skills {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+
+.skills section {
+  background-color: rgba(15, 15, 15, 0.75);
+  padding: 2rem;
+  border-radius: 2rem;
+}
+
+.skills h2 {
+  margin-bottom: 1rem;
+}
+
+h3 {
+  font-size: 1.2rem;
+}
+h4 {
+  font-size: 1rem;
+}
+
+.skills h3,
+.skills h4 {
+  text-align: left;
+}
+
+.card-section {
+  display: flex;
+  flex-direction: column;
+
+  text-align: center;
+  justify-content: space-around;
+  align-items: center;
+  color: white;
+  padding-top: 1rem;
+}
+
+.card-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 40vw;
+}
+
+.card {
+  position: absolute;
+  width: 30vw;
+  transition: transform 0.8s ease-out;
+}
+
+.card img {
+  width: 100%;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  30% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  60% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.fade-in-animation {
+  animation: fadeIn 1s;
+}
+
+.card:nth-of-type(1) {
+  transform: translateX(6%) rotate(6deg);
+}
+
+.card:nth-of-type(2) {
+  transform: translateX(2%) rotate(-5deg);
+}
+
+.card:nth-of-type(3) {
+  transform: translateX(-2%) rotate(3deg);
+}
+
+.card:nth-of-type(4) {
+  transform: translateX(6%) rotate(10deg);
+}
+
+.card-container:hover > .card:nth-of-type(1),
+.card-container:focus > .card:nth-of-type(1) {
+  transform: translate(75%, 10%) rotate(15deg);
+}
+
+.card-container:hover > .card:nth-of-type(2),
+.card-container:focus > .card:nth-of-type(2) {
+  transform: translate(25%, 0) rotate(6deg);
+}
+
+.card-container:hover > .card:nth-of-type(3),
+.card-container:focus > .card:nth-of-type(3) {
+  transform: translate(-25%, 0) rotate(-6deg);
+}
+
+.card-container:hover > .card:nth-of-type(4),
+.card-container:focus > .card:nth-of-type(4) {
+  transform: translate(-75%, 10%) rotate(-15deg);
+}
+
+.card-buttons {
+  display: flex;
+  gap: 4rem;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+.card-buttons button {
+  display: block;
+  border-radius: 2rem;
+  border: none;
+  background-color: rgb(15, 15, 15);
+  cursor: pointer;
+}
+.card-buttons button i {
+  font-size: 3rem;
+  color: white;
+  padding: 1rem;
+  transition: transform 0.5s;
+}
+
+.card-buttons button:hover,
+.card-buttons button:focus {
+  background-color: rgba(46, 46, 46, 0.75);
+}
+
+#get-previous-card:hover i,
+#get-previous-card:focus i {
+  transform: translateX(-10%);
+}
+
+#get-next-card:hover i,
+#get-next-card:focus i {
+  transform: translateX(10%);
+}
+
+.project-links {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-auto-rows: 1fr;
+  padding: 1rem;
+  gap: 2rem;
+}
+
+.project-link a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  text-align: left;
+  padding: 2rem;
+  background-color: rgba(15, 15, 15, 0.75);
+  border-radius: 1rem;
+  text-decoration: none;
+  color: white;
+  height: 100%;
+}
+
+.project-link i {
+  font-size: 2rem;
+}
+
+.project-link p {
+  font-size: 1rem;
+  color: rgba(255, 255, 255, 0.75);
+}
+
+.project-link h3 {
+  font-size: 1.2rem;
+}
+
+.project-link a:hover,
+.project-link a:focus {
+  background-color: rgba(46, 46, 46, 0.75);
+}
+
 @keyframes bounceIn {
   0% {
     opacity: 0;
@@ -149,6 +497,34 @@ footer > * {
   }
   100% {
     opacity: 100%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .home-container {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .abilities {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .about-container {
+    flex-direction: row;
+  }
+
+  .skill-bar-container {
+    grid-template-columns: 1fr;
+    width: 100%;
+  }
+
+  .skills {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .project-links {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
@@ -182,6 +558,26 @@ footer > * {
 
   footer nav {
     margin-bottom: 2rem;
+  }
+
+  .abilities {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .skill-bar-container {
+    grid-template-columns: 1fr;
+  }
+
+  .about-me {
+    flex-direction: column;
+  }
+
+  .card-container {
+    height: 60vw;
+  }
+
+  .card {
+    width: 35vw;
   }
 }
 
