--- a/stylesheets/general-styling.css
+++ b/stylesheets/general-styling.css
@@ -258,12 +258,12 @@ h2 {
   width: 100%;
   max-height: 3rem;
   padding: 0.8rem;
-  background-color: rgb(var(--lighter-main));
+  background-color: rgb(var(--darker-main));
   position: relative;
   border-radius: 2rem;
 }
 
-.active .skill-bar-color {
+.skill-bar-color {
   position: absolute;
   height: 100%;
   top: 0;
@@ -283,13 +283,13 @@ h2 {
 }
 
 .skill-bar:nth-child(1) .skill-bar-color {
-  max-width: 90%;
+  max-width: 95%;
 }
 .skill-bar:nth-child(2) .skill-bar-color {
-  max-width: 80%;
+  max-width: 90%;
 }
 .skill-bar:nth-child(3) .skill-bar-color {
-  max-width: 65%;
+  max-width: 80%;
 }
 .skill-bar:nth-child(4) .skill-bar-color {
   max-width: 85%;
@@ -509,6 +509,7 @@ h4 {
 .color-changer {
   color: rgb(var(--lightest-color));
   text-align: center;
+  padding: 0.5rem;
 }
 
 .color-changer ul {
